[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-os-core"
version = "0.1.0"
authors = [
  { name="Gage Ross Hanback" },
]
description = "Fractal Agent Orchestrator for Domotics edge-node hardware."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/JohnLoggins666/NexusOps"

